# chempotpy

./: .gitignore  CMakeLists.txt  HISTORY.txt  Makefile  README.md  README.txt  code.f90  install.script  pyproject.toml  setup.py  steup.cfg
chempotpy/: __all__.py  __init__.py  _version.py  chempotpy.f90  gen  gen.script  gen_pyf.sh  install.script  meta_chempotpy.sh
chempotpy/ALC/: 1  ALC5m0_LEPS_ModelSurface.f  ALC5m0_LEPS_ModelSurface.pyf  ALC6m0_LEPS_ModelSurface.pyf  ALC7m0_LEPS_ModelSurface.f  ALC7m0_LEPS_ModelSurface.pyf  ALC7m10_LEPS_ModelSurface.f  ALC7m10_LEPS_ModelSurface.pyf  ALC7m1_LEPS_ModelSurface.f  ALC7m1_LEPS_ModelSurface.pyf  ALC7m4_LEPS_ModelSurface.pyf  ALC7m5_LEPS_ModelSurface.pyf  ALC7m7_LEPS_ModelSurface.f  ALC7m7_LEPS_ModelSurface.pyf  ALC7p2_LEPS_ModelSurface.pyf  ALC7p3_LEPS_ModelSurface.pyf  ALC7p5_LEPS_ModelSurface.pyf  ALC_LEPS_ModelSurface.f  ALC_LEPS_ModelSurface.pyf
chempotpy/AlmHn/: AlmHn_VBO1.f  AlmHn_VBO1.pyf  AlmHn_VBO2.f  AlmHn_VBO2.pyf  __init__.py
chempotpy/Aln/: Aln_BetH.f  Aln_BetH.pyf  Aln_CleR.f  Aln_CleR.pyf  Aln_CoxJM.f  Aln_CoxJM.pyf  Aln_ER.f  Aln_ER.pyf  Aln_ER2.f  Aln_ER2.pyf  Aln_ER2AT.f  Aln_ER2AT.pyf  Aln_ER2BA.f  Aln_ER2BA.pyf  Aln_ER2CN.f  Aln_ER2CN.pyf  Aln_ER2CoxJM.pyf  Aln_ER2EACN.f  Aln_ER2EACN.pyf  Aln_ER2EAT.f  Aln_ER2EAT.pyf  Aln_ER2EBA.pyf  Aln_ER2ECN.f  Aln_ER2ECN.pyf  Aln_ER2ES.pyf  Aln_ER2ESCNa.f  Aln_ER2ESCNa.pyf  Aln_ER2ESCNm.pyf  Aln_ER2GEA.pyf  Aln_ER2MeiD.f  Aln_ER2MeiD.pyf  Aln_ER2MisFMP.f  Aln_ER2MisFMP.pyf  Aln_ER2S.f  Aln_ER2S.pyf  Aln_ER2SCNa.f  Aln_ER2SCNa.pyf  Aln_ER2SCNm.pyf  Aln_ErkIV.pyf  Aln_ErkV.f  (+63 more)
chempotpy/ArNO/: ArNO_Ap_PIPNN.f90  ArNO_Ap_PIPNN.pyf  ArNO_App_PIPNN.pyf
chempotpy/BrH2/: BrH2_LEPS_C_1982.pyf  BrH2_LEPS_LTBZ1_1995.f  BrH2_LEPS_LTBZ1_1995.pyf  BrH2_LEPS_LTBZ2_1995.f  BrH2_LEPS_LTBZ2_1995.pyf  BrH2_LEPS_LTBZ2_1995_DPEM.f  BrH2_LEPS_LTBZ2_1995_DPEM.pyf  BrH2_LEPS_LTBZSO_1995.f  BrH2_LEPS_LTBZSO_1995.pyf  BrH2_LEPS_LTBZSO_1995_DPEM.pyf  BrH2_LEPS_W_1959.pyf
chempotpy/BrHCl/: BrHCl_LEPS1.pyf  BrHCl_LEPS2.pyf  BrHCl_LEPS3.f  BrHCl_LEPS3.pyf  __init__.py
chempotpy/C2H2N2O/: C2H2N2O_PIPNN.f90  C2H2N2O_PIPNN.pyf  __init__.py  nnparam1.mod  weights.txt
chempotpy/C2H2O/: C2H2O_PIPNN.f90  C2H2O_PIPNN.pyf  __init__.py  biasesa.txt  biasesc.txt  weightsa.txt  weightsb.txt  weightsc.txt
chempotpy/C2H6Cl/: C2H6Cl_VBMM.f90  C2H6Cl_VBMM.pyf  __init__.py
chempotpy/C2H6F/: C2H6F_VBMM.f90  C2H6F_VBMM.pyf  __init__.py
chempotpy/C2H6H/: C2H6H_VBMM.f  C2H6H_VBMM.pyf  __init__.py
chempotpy/C2H6O/: C2H6O_VBMM.f  C2H6O_VBMM.pyf  __init__.py
chempotpy/C2H6OH/: C2H6OH_VBMM.pyf  __init__.py
chempotpy/C2H7/: C2H7_VBMM.f  C2H7_VBMM.pyf
chempotpy/C2N/: .README.txt.swp  C2N_PIPNN_Ap.pyf  C2N_PIPNN_App.pyf  __init__.py  c2n_2a_dprime_para_b.txt  c2n_2a_prime_para_b.txt  c2n_2a_prime_para_c.txt
chempotpy/C3H7NO/: C3H7NO_PIP.f90  C3H7NO_PIP.pyf  __init__.py  pes_shell.mod
chempotpy/C6H5SH/: C6H5SH_APRP.f90  C6H5SH_APRP.pyf  C6H5SH_APRP_DPEM.pyf  __init__.py
chempotpy/C6H6O/: PHOH_APRP.f  PHOH_APRP.pyf  PHOH_APRP_DPEM.pyf  __init__.py
chempotpy/C7H8S/: C7H8S_APRP.f90  C7H8S_APRP.pyf  C7H8S_APRP_DPEM.f90  C7H8S_APRP_DPEM.pyf  C7H8S_III_APRP.pyf  C7H8S_III_APRP_DPEM.pyf  C7H8S_S22_APRP.f90  C7H8S_S22_APRP.pyf  C7H8S_S22_APRP_DPEM.f90  C7H8S_S22_APRP_DPEM.pyf  __init__.py
chempotpy/CH2O/: CH2O_PIPNN.f90  CH2O_PIPNN.pyf  __init__.py  biases.txt  weights.txt
chempotpy/CH2O2/: CH2O2_PIPNN.f90  CH2O2_PIPNN.pyf  biases.txt  weights.txt
chempotpy/CH3NH2/: CH3NH2_APRP.f  CH3NH2_APRP.f_orig  CH3NH2_APRP.pyf  CH3NH2_APRP_DPEM.f  CH3NH2_APRP_DPEM.pyf  __init__.py
chempotpy/CH3OH/: CH3OH_PIP.pyf  pes_shell.mod
chempotpy/CH4/: CH4_GEN_SP_2001.f  CH4_GEN_SP_2001.f90  CH4_GEN_SP_2001.pyf  __init__.py  ch4T8.f  ch4T8.pyf  ch4pes
chempotpy/CH4Br/: CH4Br_VBMM_2002.f  CH4Br_VBMM_2002.pyf  __init__.py
chempotpy/CH4CN/: CH4CN_VBMM.f90  CH4CN_VBMM.pyf
chempotpy/CH4Cl/: CH4Cl_VBMM_2000.f90  CH4Cl_VBMM_2000.pyf  CH4Cl_VBMM_2005.f  CH4Cl_VBMM_2005.pyf  __init__.py
chempotpy/CH4F/: CH4F_GEN_GCSO_1996.pyf  CH4F_GEN_GC_1996.f  CH4F_GEN_GC_1996.pyf  CH4F_LEPS_RNCG_2006.f  CH4F_LEPS_RNCG_2006.pyf  CONST-noso  CONST-so  __init__.py
chempotpy/CH4O/: CH4O_LEP_1995.f  CH4O_LEP_1995.pyf  CH4O_LEP_1998.pyf  CH4O_LEP_2000.pyf  CH4O_LEP_2014.pyf  __init__.py
chempotpy/CH4OCl/: CH4OCl_PIPNN.f90  CH4OCl_PIPNN.pyf  CH4OCl_VBMM_2023.f  CH4OCl_VBMM_2023.pyf  __init__.py  biases.txt  weights.txt
chempotpy/CH4OF/: CH4OF_PIPNN.f90  CH4OF_PIPNN.pyf  __init__.py  biases.txt  nnparam.mod  weights.txt
chempotpy/CH4OH/: CH4OH_VBMM_2000.pyf  CH4OH_VBMM_2015.f90  CH4OH_VBMM_2015.pyf  __init__.py
chempotpy/CH4_H2O_H2O/: CH4_H2O_H2O_PIP.f90  CH4_H2O_H2O_PIP.pyf  __init__.py  bemsa.mod
chempotpy/CH5/: CH5_GEN_J1_1987.pyf  CH5_GEN_J2_1987.pyf  CH5_LEPS_JG_1995.pyf  CH5_LEPS_JJ_2002.pyf  CH5_VBMM_CBG_2009.f  CH5_VBMM_CBG_2009.pyf  __init__.py
chempotpy/CH5O2/: CH5O2_VBMM_2023.f  CH5O2_VBMM_2023.pyf
chempotpy/CH5p/: CH5p_PIP.f90  CH5p_PIP.pyf  __init__.py  fullfit.inc
chempotpy/COCO/: COCO_PIPNN.f90  COCO_PIPNN.pyf  __init__.py  nn_ococ_w20.txt
chempotpy/Cl2H/: Cl2H_LEPS_BCMR_1983.pyf  Cl2H_LEPS_KNPRY_1966.pyf  Cl2H_LEPS_PK2_1987.pyf  Cl2H_LEPS_PK3_1987.f  Cl2H_LEPS_PK3_1987.pyf  __init__.py
chempotpy/ClH2/: ClH2_LEPS_ALTG1_1996.pyf  ClH2_LEPS_ALTG2_1996.f  ClH2_LEPS_ALTG2_1996.pyf  ClH2_LEPS_GTM1_1981.pyf  ClH2_LEPS_GTM2_1981.f  ClH2_LEPS_GTM2_1981.pyf  ClH2_LEPS_GTM3_1981.f  ClH2_LEPS_GTM3_1981.pyf  ClH2_LEPS_GTM4_1982.f  ClH2_LEPS_GTM4_1982.pyf  ClH2_LEPS_KNPRY_1966.f  ClH2_LEPS_KNPRY_1966.pyf  ClH2_LEPS_LB_1980.f  ClH2_LEPS_LB_1980.pyf  ClH2_LEPS_PK1_1966.f  ClH2_LEPS_PK1_1966.pyf  ClH2_LEPS_PK2_1966.f  ClH2_LEPS_PK2_1966.pyf  ClH2_LEPS_SPK_1973.pyf  ClH2_LEPS_STSBLTG1_1989.f  ClH2_LEPS_STSBLTG1_1989.pyf  ClH2_LEPS_STSBLTG2_1989.pyf  ClH2_LEPS_TTGI1_1985.f  __init__.py  (+3 more)
docs/: List_of_potentials.txt  MEMO_FOR_ADDING_POTENTIAL.txt  Manual.txt
(+1099 files in other folders)
